--- a/ipa_dis.plist
+++ b/ipa_dis.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://192.168.88.240/test.ipa</string>
+                    <string>https://192.168.88.240/test.ipa</string>
                 </dict>
             </array>
         <key>metadata</key>
